@@ -120,6 +120,7 @@
 - Added --show-index for genounzip and genocat - see index embedded in a genozip file
 - Added --fast option for (a lot) faster compression, with (somewhat) reduced compression ratio
 - Added --grep for genocat FASTQ
+- Added --debug-progress and --show-hash, useful mostly for genozip developers
 - Reduce default vblock from 128MB to 16MB
 
 Note: some versions numbers are skipped due to failed conda builds (every build attempt consumes a version number)
